Fix for settings always read from filesystem cache. Spacing of signed in menu

--- a/src/web/assets/css/platform.css
+++ b/src/web/assets/css/platform.css
@@ -181,6 +181,9 @@ div.mce-panel {
       left: 12px;
     }
 }
+a.nav-btn-account {
+    padding-left: 0;
+}
 /*page-nav*/
 /*messages*/
 .h0 {
